<resources>
    <string name="app_name">Dados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dice_selection_title">Selecciona tus dados</string>
    <string name="howmany_title">¿Cuantos giros?</string>
    <string name="result_title">Resultado</string>
    <string name="btn_anterior">Volver</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="tiradas">Tiradas</string>
    <string name="media">Media</string>
    <string name="moda">Moda</string>
    <string name="history_title">Historial</string>
    <string name="start_txt">Inicio</string>
    <string name="stats_title">Estadisticas</string>
    <string name="config_title">Configuración</string>
    <string name="app_theme_txt">Tema de Aplicación</string>
    <string name="vibrate_txt">Vibración</string>
    <string name="sound_txt">Sonido</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="filter_txt_1d">1D</string>
    <string name="filter_txt_7d">7D</string>
    <string name="filter_txt_1m">1M</string>
    <string name="filter_txt_1y">1Y</string>
</resources>