<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    >

    <LinearLayout
        android:id="@+id/stadistics_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_title"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_containers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stadistics_title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_1d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_txt_1d"
            android:layout_marginHorizontal="2dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_txt_7d"
            android:layout_marginHorizontal="2dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_1m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_txt_1m"
            android:layout_marginHorizontal="2dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_1y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_txt_1y"
            android:layout_marginHorizontal="2dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stadistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/filter_containers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiradas"
                        />

                    <TextView
                        android:id="@+id/tiradas_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00"
                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/media"
                        />

                    <TextView
                        android:id="@+id/media_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00"
                        />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moda"
                    />

                <TextView
                    android:id="@+id/moda_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"
                    />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>