<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    >

    <LinearLayout
        android:id="@+id/howmany_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howmany_title"
            android:textSize="20sp"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/howmany_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/howmany_title"
        app:layout_constraintBottom_toTopOf="@+id/howmany_btns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="40dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/howmany_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/howmany_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/howmany_btn_goback"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_anterior"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/howmany_btn_next"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_siguiente"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>